# ARC-AGI

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/additional_datasets/: additional_datasets_classification_labels.json  rejected_tasks.json
data/additional_datasets/com_arc/: com_arc_challenges.json  com_arc_solutions.json
data/additional_datasets/concept_arc/: concept_arc_challenges.json  concept_arc_solutions.json
data/additional_datasets/dbigham_arc/: dbigham_arc_challenges.json  dbigham_arc_solutions.json
data/additional_datasets/mini_arc/: mini_arc_challenges.json  mini_arc_solutions.json
data/additional_datasets/ns_arc/: ns_arc_challenges.json  ns_arc_solutions.json
data/additional_datasets/pqa_arc/: pqa_arc_challenges.json  pqa_arc_solutions.json
data/additional_datasets/re_arc/: re_arc_solutions.json
data/additional_datasets/so_arc/: so_arc_challenges.json  so_arc_solutions.json
data/additional_datasets/synth_arc/: synth_arc_challenges.json  synth_arc_solutions.json
data/additional_datasets/tama_arc/: tama_arc_challenges.json  tama_arc_solutions.json
data/configs/: agents_config.py  env_configs.py  rl_configs.py
data/dataset/: ARC_dataset.py  idx2agent.pkl  idx2task.pkl  task2difficulty.json
data/datasets/ARC/: ARC_dataset.py  arc_dataset.py  classification_dataset.pkl  idx2task.pkl
data/prompts/: prompts_elements.py
data/prompts/agents_info/: v1.j2
data/prompts/auxiliary_info/: v1.j2
data/prompts/coordinator_instruction/: v1.j2
data/prompts/decision_instruction/: v1.j2
data/prompts/delegate_guidelines/: v1.j2
data/prompts/examples/: v1.j2
data/prompts/examples_intro/: v1.j2
data/prompts/general_instruction/: v1.j2
data/prompts/grid_description/: v1.j2
data/prompts/hints/: v1.j2
data/prompts/memory/: v1.j2
data/prompts/modules_info/: v1.j2
data/prompts/output_format/: v1.j2
data/prompts/role_instruction/: v1.j2
data/prompts/solution/: v1.j2
data/prompts/task_repr/: v1.j2  v2.j2
data/prompts/validation_criteria/: v1.j2
llm/: callbacks.py  llm_runners.py  prompts.py  utils.py
orchestration/: __main__.py  configs.py  graph.py
rl/: ARC_env.py  ARC_task.py  ARC_transformators.py  ARC_world.py  agent.py  arc_env.py  arc_transformators.py  arc_world.py  callbacks.py  evaluation.py  features.py  mcts.py  optimization.py  plotting.py  policy.py  rl_job.py  rl_module.py  training.py  utils.py
subsymbolic/: arc_blocks_data.py  arc_grid_formatting.py  arc_resolvers.py  callbacks.py  configs.py  llm_runtime.py  llm_setup.py  logging.py  processing.py  prompt_builder.py  prompts.py  registry.py  rl_job.py  subsymbolic_module.py  utils.py
symbolic/: analyse.py  analyzer.py  objects_analysis.py  patterns.py  summaries.py  symbolic_module.py  symbolic_solvers.py  task_analysis.py  testing_toolkit.py  tools.py  utils.py
tests/: conftest.py  test_llm_smoke.py  test_orchestration.py  test_rl_env.py  test_rl_mcts.py  test_rl_plotting.py  test_rl_transformators.py
utils/: plotting.py  utils.py
