[project]
name = "arc-challenge"
version = "0.1.0"
description = "Repository representing experimental ideas to deal with ARC-AGI benchmarks challenges"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas==3.0.3",
    "scipy==1.18.0",
    "PyYAML==6.0.3",
    "pydantic==2.13.4",
    "Jinja2==3.1.6",
    "tqdm==4.69.0",
    "matplotlib==3.11.1",
    "datasets",
    "langgraph==1.2.9",
]

[project.optional-dependencies]
rl = [
    "gymnasium==1.3.0",
    "stable-baselines3==2.9.0",
    "torch",
    "optuna==4.9.0",
    "wandb==0.28.1",
    "torch_geometric",
]
hf = [
    "transformers==5.14.1",
    "torch",
    "pytorch-lightning==2.6.5",
]
vllm = [
    "vllm>=0.6",
]
llama-cpp = [
    "llama-cpp-python",
]
openrouter = [
    "openai==2.46.0",
]
test = [
    "pytest",
    "huggingface_hub",
    "arc-challenge[llama-cpp]",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ruff==0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires a GPU; opt-in only, set ARC_TEST_GPU=1 to run (skipped by default)",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Pyflakes (undefined names, unused imports/variables/functions) plus a few
# pycodestyle checks for actual mistakes rather than style opinions - close
# to ruff's own recommended defaults. Deliberately no E1/E2/E501: the bulk
# of the repo predates any whitespace/line-length convention, and enabling
# those now (particularly E226/E231 in preview mode) drowns real findings
# in ~1650 pre-existing style-only hits.
select = ["E4", "E7", "E9", "F", "W"]
